--- a/wizebot-web/src/views/styles/HomeViewStyle.css
+++ b/wizebot-web/src/views/styles/HomeViewStyle.css
@@ -1,8 +1,8 @@
 .home-container{
     display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
+    align-items: start;
+    justify-content: start;
+    flex-direction: row;
     margin: 50px;
     padding: 10px;
     background-color: #ccc;
@@ -13,16 +13,32 @@
 .home-container > .container-wrapper {
     display: flex;
     align-items: center;
-    flex-direction: row;
+    flex-direction: column;
     padding: 5px;
-    width: 100%;
     background-color: #aaa;
     border-radius: 8px;
+    margin: 5px;
 }
 
 .accounts-wrapper {
     display: flex;
     align-items: start;
+    justify-content: start;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+
+.home-container > .content-wrapper {
+    position: relative;
+    flex: 1;
+    display: flex;
+    align-items: flex-start;
     flex-direction: row;
-	flex-wrap: wrap;
+    justify-content: space-between;
+    background: white;
+    border-radius: 8px;
+    padding: 5px;
+    margin: 5px;
+    flex-wrap: wrap;
+    width: 100%;
 }
