--- a/wizebot-web/src/App.css
+++ b/wizebot-web/src/App.css
@@ -2,9 +2,31 @@
   padding: 0;
   margin: 0;
 }
+
+html {
+    height: 100%;
+}
+
 body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  background-color: #FFCC00;
+    height: 100%;
+  	padding: 0;
+    margin: 0;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+
+
+.column{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.row-wrap {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.flex-column {
+  flex: 1;
 }
