--- a/wizebot-web/src/views/styles/HomeViewStyle.css
+++ b/wizebot-web/src/views/styles/HomeViewStyle.css
@@ -12,20 +12,21 @@
 
 .home-container > .container-wrapper {
     display: flex;
-    align-items: center;
+    align-items: start;
     flex-direction: column;
     padding: 5px;
     background-color: #aaa;
     border-radius: 8px;
     margin: 5px;
+    width: 100%;
 }
 
 .accounts-wrapper {
     display: flex;
     align-items: start;
     justify-content: start;
-    flex-direction: column;
     flex-wrap: wrap;
+    width: 100%;
 }
 
 .home-container > .content-wrapper {
@@ -41,4 +42,46 @@
     margin: 5px;
     flex-wrap: wrap;
     width: 100%;
+}
+
+.user-container {
+    background-color: #fff;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    border-radius: 8px;
+    margin: 10px;
+    border: 1px solid #5f5f5f;
+    padding: 10px;
+	flex-grow: 1;
+}
+
+.player-content {
+    width: 350px;
+    align-items: center;
+    display: flex;
+}
+
+.main {
+    border:2px solid green;
+}
+
+.smurf {
+    border: 2px solid rgb(90, 205, 253);
+}
+
+.smurfBtn{
+    margin: 10px;
+    padding: 5px;
+    border-radius: 8px;
+    font-size: 1.2em;
+    font-weight: 600;
+    background: rgb(90, 205, 253);
+    color: white;
+    border: 2px solid rgb(36, 111, 143);
+}
+
+.smurfBtn:hover {
+    box-shadow:  inset 0px 0px 25px 1px rgba(0,0,0,0.75);
 }
