--- a/wizebot-web/src/views/styles/UserComponents.css
+++ b/wizebot-web/src/views/styles/UserComponents.css
@@ -1,20 +1,6 @@
-.user-container {
-    background-color: #fff;
-    border: 1px solid #5f5f5f;
-    width: 300px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    border-radius: 8px;
-    margin: 10px;
-    padding: 10px;
-	flex-grow: 1;
-}
 
 .user-container > .content-wrapper{
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
@@ -28,10 +14,21 @@
     padding: 10px;
 }
 
+.user-info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.1em;
+    font-weight: 500;
+}
+
 .elo-container {
     flex: 1;
 }
 
 .user-container p {
     margin: 0;
+    text-align: center;
+
 }
