--- a/wizebot-web/src/views/styles/HomeViewStyle.css
+++ b/wizebot-web/src/views/styles/HomeViewStyle.css
@@ -3,7 +3,7 @@
     align-items: start;
     justify-content: start;
     flex-direction: row;
-    margin: 50px;
+    margin: 70px 50px 50px 50px;
     padding: 10px;
     background-color: #ccc;
     border-radius: 25px;
